--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body {
 
   height: 100vh;
   width: 100vw;
-  background: url(../img/Dirt.png);
+  background: url(../img/stone1.png);
 }
 
 .logo-button-start {
