--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Minecraft bold', sans-serif;
 }
 
 body {
@@ -44,7 +45,7 @@ body {
 .pickaxe {
   width: 15vmin;
   height: 15vmin;
-  background: url(../img/pick_axe.png) no-repeat center center/cover;
+  background: url(../assets/img/pick_axe.png) no-repeat center center/cover;
   margin-top: 10%;
   border: 1px solid #555;
 }
@@ -52,14 +53,14 @@ body {
 .shovel {
   width: 15vmin;
   height: 15vmin;
-  background: url(../img/shovel.png) no-repeat center center/cover;
+  background: url(../assets/img/shovel.png) no-repeat center center/cover;
   border: 1px solid #555;
 }
 
 .axe {
   width: 15vmin;
   height: 15vmin;
-  background: url(../img/axe.png) no-repeat center center/cover;
+  background: url(../assets/img/axe.png) no-repeat center center/cover;
   border: 1px solid #555;
 }
 .last-picked {
@@ -75,37 +76,43 @@ body {
 .dirt {
   width: 10%vmin;
   height: 10%vmin;
-  background: url(../img/dirt.png) no-repeat center center/cover;
+  background: url(../assets/img/dirt.png) no-repeat center center/cover;
 }
 
 .grass {
   width: 10%vmin;
   height: 10%vmin;
-  background: url(../img/grass.png) no-repeat center center/cover;
+  background: url(../assets/img/grass.png) no-repeat center center/cover;
 }
 
 .stone {
   width: 10%vmin;
   height: 10%vmin;
-  background: url(../img/stone1.png) no-repeat center center/cover;
+  background: url(../assets/img/stone1.png) no-repeat center center/cover;
 }
 
 .wood {
   width: 10%vmin;
   height: 10%vmin;
-  background: url(../img/wood.png) no-repeat center center/cover;
+  background: url(../assets/img/wood.png) no-repeat center center/cover;
 }
 
 .leaves {
   width: 10%vmin;
   height: 10%vmin;
-  background: url(../img/leaves.png) no-repeat center center/cover;
+  background: url(../assets/img/leaves.png) no-repeat center center/cover;
 }
 
 .sky {
   width: 10%vmin;
   height: 10%vmin;
   background-color: #00BFFF;
+}
+
+.sun {
+  width: 10%vmin;
+  height: 10%vmin;
+  background-color: #ffe101;
 }
 
 .cloud {
@@ -125,6 +132,7 @@ body {
   height: 15vmin;
   background-color: #555;
   color: white;
+ font-family: 'Minecraft bold', sans-serif;
 }
 
 .last-picked-click {
