--- a/css/main.css
+++ b/css/main.css
@@ -1,105 +1,212 @@
+    @font-face {
+    font-family: 'Minecraft Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Minecraft Regular'), url('../assets/fonts/1_MinecraftRegular1.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Minecraft Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Minecraft Italic'), url('../assets/fonts/2_MinecraftItalic1.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Minecraft Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Minecraft Bold'), url('../assets/fonts/3_MinecraftBold1.woff') format('woff');
+    }
+    
+    @font-face {
+    font-family: 'Minecraft Bold Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Minecraft Bold Italic'), url('../assets/fonts/4_MinecraftBoldItalic1.woff') format('woff');
+    }
+
 body .game {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+}
 
 body .game .side-menu {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 body .game .game-board {
   display: grid;
   grid-template-rows: repeat(20, 1fr);
-  grid-template-columns: repeat(20, 1fr); }
+  grid-template-columns: repeat(20, 1fr);
+}
 
 body .game .game-board {
-  align-self: flex-start; }
+  align-self: flex-start;
+}
 
 body .game {
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+}
 
-body .game .side-menu .reset, body .game .side-menu .pickaxe, body .game .side-menu .shovel, body .game .side-menu .axe, body .game .side-menu .last-picked, body .game .side-menu .last-picked-click, body .game .game-board .last-picked-click {
+body .game .side-menu .reset,
+body .game .side-menu .pickaxe,
+body .game .side-menu .shovel,
+body .game .side-menu .axe,
+body .game .side-menu .last-picked,
+body .game .side-menu .last-picked-click,
+body .game .game-board .last-picked-click {
   width: 15vmin;
-  height: 15vmin; }
+  height: 15vmin;
+}
 
-body .game .side-menu .dirt, body .game .side-menu .grass, body .game .side-menu .stone, body .game .side-menu .wood, body .game .side-menu .leaves, body .game .side-menu .sky, body .game .side-menu .cloud, body .game .side-menu .selected, body .game .game-board .dirt, body .game .game-board .grass, body .game .game-board .stone, body .game .game-board .wood, body .game .game-board .leaves, body .game .game-board .sky, body .game .game-board .cloud, body .game .game-board .selected {
+body .game .side-menu .dirt,
+body .game .side-menu .grass,
+body .game .side-menu .stone,
+body .game .side-menu .wood,
+body .game .side-menu .leaves,
+body .game .side-menu .sun,
+body .game .side-menu .sky,
+body .game .side-menu .cloud,
+body .game .side-menu .selected,
+body .game .game-board .dirt,
+body .game .game-board .grass,
+body .game .game-board .stone,
+body .game .game-board .wood,
+body .game .game-board .leaves,
+body .game .game-board .sun,
+body .game .game-board .sky,
+body .game .game-board .cloud,
+body .game .game-board .selected {
   width: 10%vmin;
-  height: 10%vmin; }
+  height: 10%vmin;
+}
 
 body .game .game-board {
   width: 85%;
-  height: 100%; }
+  height: 100%;
+}
 
 body .game .side-menu {
   height: 100%;
-  width: 15vw; }
+  width: 15vw;
+}
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   font-size: 62.5%;
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+}
 
 body .game .side-menu {
-  gap: 2rem; }
+  gap: 2rem;
+}
 
 body .game .side-menu {
-  border: 1px solid #555; }
+  border: 1px solid #555;
+}
 
 body .game .side-menu {
-  background-color: white; }
+  background-color: white;
+}
 
-body .game .side-menu .reset, body .game .side-menu .selected, body .game .game-board .selected {
-  background-color: #555; }
+body .game .side-menu .reset,
+body .game .side-menu .selected,
+body .game .game-board .selected {
+  background-color: #555;
+}
 
 body .game .side-menu .reset {
-  color: white; }
+  color: white;
+}
 
 body .game .side-menu .pickaxe {
-  background: url(../img/pick_axe.png) no-repeat center center/cover; }
+  background: url(../assets/img/pick_axe.png) no-repeat center center/cover;
+}
 
 body .game .side-menu .shovel {
-  background: url(../img/shovel.png) no-repeat center center/cover; }
+  background: url(../assets/img/shovel.png) no-repeat center center/cover;
+}
 
 body .game .side-menu .axe {
-  background: url(../img/axe.png) no-repeat center center/cover; }
+  background: url(../assets/img/axe.png) no-repeat center center/cover;
+}
 
-body .game .side-menu .pickaxe, body .game .side-menu .shovel, body .game .side-menu .axe, body .game .side-menu .last-picked {
-  border: 1px solid #555; }
+body .game .side-menu .pickaxe,
+body .game .side-menu .shovel,
+body .game .side-menu .axe,
+body .game .side-menu .last-picked {
+  border: 1px solid #555;
+}
 
-body .game .side-menu .last-picked, body .game .side-menu .last-picked-click, body .game .game-board .last-picked-click {
-  background-color: white; }
+body .game .side-menu .last-picked,
+body .game .side-menu .last-picked-click,
+body .game .game-board .last-picked-click {
+  background-color: white;
+}
 
 body .game .side-menu .pickaxe {
-  margin-top: 10%; }
+  margin-top: 10%;
+}
 
-body .game .side-menu .none, body .game .side-menu .sky, body .game .game-board .none, body .game .game-board .sky {
-  background-color: #00BFFF; }
+body .game .side-menu .none,
+body .game .side-menu .sky,
+body .game .game-board .none,
+body .game .game-board .sky {
+  background-color: #00bfff;
+}
 
-body .game .side-menu .dirt, body .game .game-board .dirt {
-  background: url(../img/Dirt.png) no-repeat center center/cover; }
+body .game .side-menu .dirt,
+body .game .game-board .dirt {
+  background: url(../assets/img/dirt.png) no-repeat center center/cover;
+}
 
-body .game .side-menu .grass, body .game .game-board .grass {
-  background: url(../img/Grass.png) no-repeat center center/cover; }
+body .game .side-menu .grass,
+body .game .game-board .grass {
+  background: url(../assets/img/grass.png) no-repeat center center/cover;
+}
 
-body .game .side-menu .stone, body .game .game-board .stone {
-  background: url(../img/stone1.png) no-repeat center center/cover; }
+body .game .side-menu .stone,
+body .game .game-board .stone {
+  background: url(../assets/img/stone1.png) no-repeat center center/cover;
+}
 
-body .game .side-menu .wood, body .game .game-board .wood {
-  background: url(../img/wood.png) no-repeat center center/cover; }
+body .game .side-menu .wood,
+body .game .game-board .wood {
+  background: url(../assets/img/wood.png) no-repeat center center/cover;
+}
 
-body .game .side-menu .leaves, body .game .game-board .leaves {
-  background: url(../img/Leaves.png) no-repeat center center/cover; }
+body .game .side-menu .leaves,
+body .game .game-board .leaves {
+  background: url(../assets/img/leaves.png) no-repeat center center/cover;
+}
 
-body .game .side-menu .cloud, body .game .game-board .cloud {
-  background-color: white; }
+body .game .side-menu .cloud,
+body .game .game-board .cloud {
+  background-color: white;
+}
 
-body .game .side-menu .selected, body .game .side-menu .last-picked-click, body .game .game-board .selected, body .game .game-board .last-picked-click {
-  border: 3px solid #555; }
+body .game .side-menu .cloud,
+body .game .game-board .cloud  {
+    background-color: #f6b833;
+}
+
+body .game .side-menu .selected,
+body .game .side-menu .last-picked-click,
+body .game .game-board .selected,
+body .game .game-board .last-picked-click {
+  border: 3px solid #555;
+}
