--- a/css/style.css
+++ b/css/style.css
@@ -127,12 +127,31 @@ body {
   background-color: #555;
 }
 
-.reset {
-  width: 15vmin;
-  height: 15vmin;
+#reset {
+  font-family: 'Minecraft bold', sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  width: 10vmin;
+  height: 10vmin;
   background-color: #555;
   color: white;
- font-family: 'Minecraft bold', sans-serif;
+  border: 4px solid #000;
+   border-radius: 15%;
+   cursor: pointer;
+}
+
+#reset:active {
+  font-family: 'Minecraft bold', sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  width: 10vmin;
+  height: 10vmin;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 4, 4);
+  border: 3px solid #d12323;
+  border-radius: 15%;
+  box-shadow: inset 0 0 20px 2px #7d7b7b;
+  cursor: pointer;
 }
 
 .last-picked-click {
